--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,4 +1,5 @@
-<table class="table table-striped table-hover ">
+<button type="button" class="btn btn-primary add-employee" data-toggle="modal" data-target="#add-employee-modal">增加员工</button>
+<table class="table table-striped table-hover employees-table">
 	<thead>
 		<tr>
 			<th>#</th>
@@ -22,14 +23,108 @@
 		</tr>
 		<% end %>
 	</tbody>
-	<tfoot>
-		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td><button type="button" class="add-employee">增加员工</button></td>
-		</tr>
-	</tfoot>
 </table>
+
+
+<div class="modal" id="add-employee-modal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+				<h4 class="modal-title">增加员工</h4>
+			</div>
+			<div class="modal-body">
+				<form class="form-horizontal add-employee-form">
+					<fieldset>
+						<legend>Legend</legend>
+						<div class="form-group">
+						<label for="employeeNo" class="col-lg-2 control-label">工号</label>
+							<div class="col-lg-10">
+							<input type="text" class="form-control" name="employeeNo" placeholder="输入工号">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="employeeName" class="col-lg-2 control-label">姓名</label>
+							<div class="col-lg-10">
+								<input type="text" class="form-control" name="employeeName" placeholder="姓名">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-lg-2 control-label">岗位</label>
+							<div class="col-lg-10">
+								<div class="radio">
+									<label>
+										<input type="radio" name="employeeTitle" value="manager" checked="">
+										经理
+									</label>
+								</div>
+								<div class="radio">
+									<label>
+										<input type="radio" name="employeeTitle" value="salesman">
+										销售
+									</label>
+								</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-lg-10 col-lg-offset-2">
+								<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+								<button type="reset" class="btn btn-default">清空</button>
+								<button type="submit" class="btn btn-primary add-employee">提交</button>
+							</div>
+						</div>
+					</fieldset>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<% content_for :page_javascript do %>
+<script>
+	$(function(){
+			// console.log(">>>page_javascript loaded!");
+			var $add = $(".add-employee");
+			var $addEmployeeForm = $(".add-employee-form");
+			var $addEmployeeDialog = $("#add-employee-modal");
+			var $employeesTable = $(".employees-table");
+
+			$employeesTable.on("refresh.employees", function(){
+				var tpl = "";
+				$.ajax({
+					url: "/employees",
+					type: "GET",
+					dataType: "json",
+					success: function(resp){
+			// 			tpl += "<tr class='info'>" +
+			// 							"<td>" +  + "</td>" +
+
+
+					}
+				})
+			})
+
+
+			$addEmployeeForm.on("submit", function(event){
+				var $form = $(this);
+				$.ajax({
+					url: "/employees",
+					data: $form.serialize(),
+					type: "POST",
+					success: function(resp){
+						$employeesTable.trigger("refresh.employees");
+					},
+					complete: function(resp){
+						$addEmployeeDialog.modal("hide");
+					}
+				});
+
+				return false;
+			});
+			// $add.on("click.add-employee", function(event){
+			// });
+
+});
+</script>
+<% end %>
