--- a/app/views/_nav_bar.html.erb
+++ b/app/views/_nav_bar.html.erb
@@ -7,14 +7,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Gift</a>
+      <a class="navbar-brand" href="#">蓝箭币管理系统</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
         <li class="">
-          <%#= link_to '用户管理'  %>
-          <a href="#">用户管理<span class="sr-only">(current)</span></a>
+          <%= link_to '用户管理', employees_path %>
         </li>
         <li>
           <a href="#">我的信息</a>
