--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,82 +1,48 @@
-<button type="button" class="btn btn-primary add-employee" data-toggle="modal" data-target="#add-employee-modal">增加员工</button>
-<table class="table table-striped table-hover employees-table">
+<table class="table table-striped table-hover employees-table ms-controller" ms-controller="employees">
 	<thead>
 		<tr>
 			<th>工号</th>
 			<th>姓名</th>
-			<!-- <th>岗位</th> -->
 			<th>持有</th>
 			<th>获赠</th>
-			<!-- <th>可用</th> -->
+			<th>操作</th>
 		</tr>
 	</thead>
-	<tbody ms-controller="employees" class="ms-controller">
-		<tr class="info" ms-repeat="list">
-			<td>{{el.no}}</td>
-			<td>{{el.name}}</td>
-			<td></td>
-			<td></td>
-			<!-- <td>find_get_coins(e.id)</td>
-			<td>find_can_give_out_coins(e.id)</td>
-			<td>find_can_exchange_coins(e.id)</td> -->
+	<tbody >
+		<tr class="employee-item" ms-repeat="list">
+			<td>
+				<span ms-visible="editShow !== $index && el.id">{{el.no}}</span>
+				<input type="text" ms-visible="editShow === $index || !el.id" ms-duplex="el.no">
+			</td>
+			<td>
+				<span ms-visible="editShow !== $index && el.id">{{el.name}}</span>
+				<input type="text" ms-visible="editShow === $index || !el.id" ms-duplex="el.name">
+			</td>
+			<td>
+				<span>{{el.own_coins}}</span>
+			</td>
+			<td>
+				<span>{{el.get_coins}}</span>
+			</td>
+			<td>
+				<button type="button" class="btn btn-default" ms-visible="editShow !== $index && el.id" ms-click="toggleEdit($index)">{{ '编辑' }}</button>
+				<button type="button" class="btn btn-default" ms-visible="editShow === $index && el.id" ms-click="submitEdit(el),toggleEdit('')">{{ '确定' }}</button>
+				<button type="button" class="btn btn-default" ms-visible="!el.id" ms-click="submitNew(el),toggleEdit('')">{{ '确定' }}</button>
+				<button type="button" class="btn btn-default" ms-click="deleteEmployee(el)">{{ '删除' }}</button>
+			</td>
 		</tr>
 	</tbody>
+	<tfoot>
+		<tr>
+			<td colspan="5">
+				<button type="button" class="btn btn-primary add-employee" ms-click="newEmployee">增加员工</button>
+				
+			</td>
+		</tr>
+	</tfoot>
 </table>
 
 
-<div class="modal" id="add-employee-modal">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-				<h4 class="modal-title">增加员工</h4>
-			</div>
-			<div class="modal-body">
-				<form class="form-horizontal add-employee-form">
-					<fieldset>
-						<legend>Legend</legend>
-						<div class="form-group">
-						<label for="employeeNo" class="col-lg-2 control-label">工号</label>
-							<div class="col-lg-10">
-							<input type="text" class="form-control" name="employeeNo" placeholder="输入工号">
-							</div>
-						</div>
-						<div class="form-group">
-							<label for="employeeName" class="col-lg-2 control-label">姓名</label>
-							<div class="col-lg-10">
-								<input type="text" class="form-control" name="employeeName" placeholder="姓名">
-							</div>
-						</div>
-						<div class="form-group">
-							<label class="col-lg-2 control-label">岗位</label>
-							<div class="col-lg-10">
-								<div class="radio">
-									<label>
-										<input type="radio" name="employeeTitle" value="manager" checked="">
-										经理
-									</label>
-								</div>
-								<div class="radio">
-									<label>
-										<input type="radio" name="employeeTitle" value="salesman">
-										销售
-									</label>
-								</div>
-							</div>
-						</div>
-						<div class="form-group">
-							<div class="col-lg-10 col-lg-offset-2">
-								<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-								<button type="reset" class="btn btn-default">清空</button>
-								<button type="submit" class="btn btn-primary add-employee">提交</button>
-							</div>
-						</div>
-					</fieldset>
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
 
 
 <% content_for :page_javascript do %>
@@ -84,13 +50,17 @@
 	$(function(){
 			var $addEmployeeForm = $(".add-employee-form");
 			var $addEmployeeDialog = $("#add-employee-modal");
+			var MAP = {
+				'update' : 'PATCH',
+				'new' : 'POST',
+				'delete' : 'DELETE'
+			};
 
-			$addEmployeeForm.on("submit", function(event){
-				var $form = $(this);
+			var submit = function(item,type){
 				$.ajax({
-					url: "/employees",
-					data: $form.serialize(),
-					type: "POST",
+					url: type === 'new' ? "/employees" : "/employees/" + item.id,
+					data: item.$model,
+					type: MAP[type],
 					success: function(resp){
 						$.ajax({
 							url: "/employees",
@@ -103,18 +73,43 @@
 
 					},
 					complete: function(resp){
-						$addEmployeeDialog.modal("hide");
 					}
 				});
-
-				return false;
-			});
+			};
 
 			var list =  <%= @employees.to_json.html_safe %>;
 
 			var model = window.model = avalon.define({
 				$id : "employees",
-				list : list
+				list : list,
+				editShow : '',
+				toggleEdit : function(index){
+					model.editShow = index;
+				},
+				newEmployee: function(){
+					model.list.push({
+						no: '',
+						name: '',
+						own_coins: '0',
+						get_coins: '0'
+					});
+				},
+				deleteEmployee: function(el){
+					if (el.id) {
+						submitDelete(el);
+					} else{
+						model.list.pop();
+					}
+				},
+				submitEdit: function(el){
+					submit(el, 'update');
+				},
+				submitNew: function(el){
+					submit(el, 'new');
+				},
+				submitDelete: function(el){
+					submit(el, 'delete');
+				}
 			});
 
 
