--- a/app/views/_nav_bar.html.erb
+++ b/app/views/_nav_bar.html.erb
@@ -16,10 +16,13 @@
           <%= link_to '用户管理', employees_path %>
         </li>
         <li>
-          <a href="#">我的信息</a>
+          <%= link_to '发行蓝箭币', publishes_path %>
         </li>
         <li>
-          <a href="#">积分排名</a>
+          <%= link_to '赠送蓝箭币', presents_path %>
+        </li>
+        <li>
+          <%= link_to '兑换礼品', exchanges_path %>
         </li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
