--- a/app/views/exchanges/index.html.erb
+++ b/app/views/exchanges/index.html.erb
@@ -24,7 +24,7 @@
 			</td>
 			<td>
 				<span ms-visible="editShow !== $index && el.id">{{el.coin_num}}</span>
-				<input type="text" ms-visible="editShow === $index || !el.id" ms-duplex="el.coin_num">
+				<input type="text" ms-visible="editShow === $index || !el.id" ms-duplex-morethan="el.coin_num"  data-duplex-morethan="0">
 			</td>
 			<td>
 				<span ms-visible="editShow !== $index && el.id">{{el.gifts}}</span>
@@ -125,6 +125,17 @@
 					el.holder_name = name;
 				}
 			});
+
+			//这个钩子不错
+			avalon.duplexHooks.morethan = {
+				get : function(str, data){
+					var morethan = parseInt(data.element.getAttribute("data-duplex-morethan"));
+                    if (parseInt(str) <= morethan) {
+                        return data.element.value = "1";
+                    }
+                    return str;
+				}
+			};
 
 
 			
