--- a/app/views/publishes/index.html.erb
+++ b/app/views/publishes/index.html.erb
@@ -23,7 +23,7 @@
 			</td>
 			<td>
 				<span ms-visible="editShow !== $index && el.id">{{el.coin_num}}</span>
-				<input type="text" ms-visible="editShow === $index || !el.id" ms-duplex="el.coin_num">
+				<input type="text" ms-visible="editShow === $index || !el.id" ms-duplex-morethan="el.coin_num" data-duplex-morethan="0">
 			</td>
 			<td>
 				<button type="button" class="btn btn-default" ms-visible="editShow !== $index && el.id" ms-click="toggleEdit($index)">{{ '编辑' }}</button>
@@ -42,6 +42,9 @@
 		</tr>
 	</tfoot>
 </table>
+
+
+
 
 
 
@@ -120,7 +123,16 @@
 				}
 			});
 
-
+			//这个钩子不错
+			avalon.duplexHooks.morethan = {
+				get : function(str, data){
+					var morethan = parseInt(data.element.getAttribute("data-duplex-morethan"));
+                    if (parseInt(str) <= morethan) {
+                        return data.element.value = "1";
+                    }
+                    return str;
+				}
+			};
 			
 });
 </script>
