add date-picker, fix some bugs

--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -67,7 +67,7 @@
 							type: "GET",
 							dataType: "json",
 							success: function(resp){
-								model.list = resp;
+								model.list = resp.employees;
 							}
 						});
 
