--- a/app/views/publishes/index.html.erb
+++ b/app/views/publishes/index.html.erb
@@ -8,10 +8,10 @@
 		</tr>
 	</thead>
 	<tbody >
-		<tr class="publish-item" ms-repeat="publishesList">
+		<tr class="publish-item" ms-repeat="publishesList" data-repeat-rendered="initializeDatePicker">
 			<td>
 				<span ms-visible="editShow !== $index && el.id">{{el.publish_date}}</span>
-				<input type="text" ms-visible="editShow === $index || !el.id" ms-duplex="el.publish_date">
+				<input type="text" ms-visible="editShow === $index || !el.id" ms-duplex="el.publish_date" class="datepicker" placeholder="选择日期">
 			</td>
 			<td>
 				<span ms-visible="editShow !== $index && el.id">{{el.employee_name}}</span>
@@ -66,7 +66,7 @@
 							type: "GET",
 							dataType: "json",
 							success: function(resp){
-								model.publishesList = resp;
+								model.publishesList = resp.publishes;
 							}
 						});
 
@@ -117,6 +117,23 @@
 					var no = +$event.target.value;
 					var name = _.findWhere(employeesList, {no: no}).name;
 					el.employee_name = name;
+				},
+
+				initializeDatePicker: function(action,offset, length){
+					var me = this;
+					if (action == 'add') {
+						console.log(">>>> to initialize datepicker");
+						$(me).find('tr').eq(offset).find('.datepicker').datepicker({
+							format: 'yyyy-mm-dd',
+							autoclose: true,
+							language: 'zh-CN',
+							orientation: 'top left'
+
+						}).on('changeDate', function(e){
+							console.log('>>> dateChange.');
+						});
+							
+					}
 				}
 			});
 
