add devise for one user

--- a/app/views/layouts/yeti.html.erb
+++ b/app/views/layouts/yeti.html.erb
@@ -20,8 +20,9 @@
   <body class="main-body">
     <%= render "/nav_bar" %>
 
-
     <%= yield %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
 
     </div> <!-- /container -->
