--- a/app/views/_nav_bar.html.erb
+++ b/app/views/_nav_bar.html.erb
@@ -24,6 +24,8 @@
         <li>
           <%= link_to '兑换礼品', exchanges_path %>
         </li>
+        
+
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -44,21 +46,17 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form> -->
       <ul class="nav navbar-nav navbar-right">
-        <% if current_user %>
+        <% if user_signed_in? %>
         <li>
-          <%= link_to('退出', destroy_user_session_path, :method => :delete) %>
-        </li>
-        <li>
-          <%= link_to('修改密碼', edit_registration_path(:user)) %>
+          <%= link_to('登出', destroy_user_session_path, :method => :delete) %>
+          
         </li>
         <% else %>
         <li>
-          <%= link_to('注册', new_registration_path(:user)) %>
+          <%= link_to('登录', new_user_session_path) %>
+          
         </li>
-        <li>
-          <%= link_to('登录', new_session_path(:user)) %>
-        </li>
-        <% end %>
+        <% end %>  
       </ul>
     </div>
   </div>
