fix one bug: setting date first time doesnt work add export to xslx need no permission to see all the records

--- a/app/views/_nav_bar.html.erb
+++ b/app/views/_nav_bar.html.erb
@@ -24,6 +24,10 @@
         <li>
           <%= link_to '兑换礼品', exchanges_path %>
         </li>
+        <li>
+          <%= link_to '导出记录', download_home_index_path(format: :xlsx) %>
+        </li>
+
         
 
         <!-- <li class="dropdown">
