--- a/app/views/presents/index.html.erb
+++ b/app/views/presents/index.html.erb
@@ -6,7 +6,7 @@
 			<th>受赠人</th>
 			<th>赠言</th>
 			<th>赠送数量</th>
-			<th>操作</th>
+			<% if user_signed_in? %><th>操作</th><% end %>
 		</tr>
 	</thead>
 	<tbody >
@@ -39,22 +39,25 @@
 				<span ms-visible="editShow !== $index && el.id">{{el.coin_num}}</span>
 				<input type="text" ms-visible="editShow === $index || !el.id" ms-duplex-morethan="el.coin_num"  data-duplex-morethan="0">
 			</td>
+			<% if user_signed_in? %>
 			<td>
 				<button type="button" class="btn btn-default" ms-visible="editShow !== $index && el.id" ms-click="toggleEdit($index)">{{ '编辑' }}</button>
 				<button type="button" class="btn btn-default" ms-visible="editShow === $index && el.id" ms-click="submitEdit(el),toggleEdit('')">{{ '确定' }}</button>
 				<button type="button" class="btn btn-default" ms-visible="!el.id" ms-click="submitNew(el),toggleEdit('')">{{ '确定' }}</button>
 				<button type="button" class="btn btn-default" ms-click="deletePresent(el)">{{ '删除' }}</button>
 			</td>
+			<% end %>
 		</tr>
 	</tbody>
+	<% if user_signed_in? %>
 	<tfoot>
 		<tr>
-			<td colspan="5">
+			<td colspan="6">
 				<button type="button" class="btn btn-primary add-present" ms-click="newPresent">添加赠送记录</button>
-				
 			</td>
 		</tr>
 	</tfoot>
+	<% end %>
 </table>
 
 
@@ -144,15 +147,12 @@
 				initializeDatePicker: function(action,offset, length){
 					var me = this;
 					if (action == 'add') {
-						console.log(">>>> to initialize datepicker");
 						$(me).find('tr').eq(offset).find('.datepicker').datepicker({
 							format: 'yyyy-mm-dd',
 							autoclose: true,
 							language: 'zh-CN',
 							orientation: 'top left'
 
-						}).on('changeDate', function(e){
-							console.log('>>> dateChange.');
 						});
 							
 					}
