--- a/app/views/publishes/index.html.erb
+++ b/app/views/publishes/index.html.erb
@@ -4,7 +4,7 @@
 			<th>发行年月</th>
 			<th>持有人</th>
 			<th>数量</th>
-			<th>操作</th>
+			<% if user_signed_in? %><th>操作</th><% end %>
 		</tr>
 	</thead>
 	<tbody >
@@ -25,22 +25,25 @@
 				<span ms-visible="editShow !== $index && el.id">{{el.coin_num}}</span>
 				<input type="text" ms-visible="editShow === $index || !el.id" ms-duplex-morethan="el.coin_num" data-duplex-morethan="0">
 			</td>
+			<% if user_signed_in? %>
 			<td>
 				<button type="button" class="btn btn-default" ms-visible="editShow !== $index && el.id" ms-click="toggleEdit($index)">{{ '编辑' }}</button>
 				<button type="button" class="btn btn-default" ms-visible="editShow === $index && el.id" ms-click="submitEdit(el),toggleEdit('')">{{ '确定' }}</button>
 				<button type="button" class="btn btn-default" ms-visible="!el.id" ms-click="submitNew(el),toggleEdit('')">{{ '确定' }}</button>
 				<button type="button" class="btn btn-default" ms-click="deletePublish(el)">{{ '删除' }}</button>
 			</td>
+			<% end %>
 		</tr>
 	</tbody>
+	<% if user_signed_in? %>
 	<tfoot>
 		<tr>
 			<td colspan="5">
 				<button type="button" class="btn btn-primary add-publish" ms-click="newPublish">添加发行记录</button>
-				
 			</td>
 		</tr>
 	</tfoot>
+	<% end %>
 </table>
 
 
@@ -125,15 +128,12 @@
 				initializeDatePicker: function(action,offset, length){
 					var me = this;
 					if (action == 'add') {
-						console.log(">>>> to initialize datepicker");
 						$(me).find('tr').eq(offset).find('.datepicker').datepicker({
 							format: 'yyyy-mm-dd',
 							autoclose: true,
 							language: 'zh-CN',
 							orientation: 'top left'
 
-						}).on('changeDate', function(e){
-							console.log('>>> dateChange.');
 						});
 							
 					}
